--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html ng-app="DIApp" >
   <head>
     <meta charset="utf-8">
-    <title>Hello Angular</title>
+    <script src="angular.min.js" ></script>
+    <script src="appnew.js" ></script>
+    <title>Dependency Injection in Javascript and AngularJs</title>
   </head>
   <body>
-    <h1>Hello Angular!</h1>
+    <h1>Dependency Injection in Javascript and AngularJs</h1>
+    <div ng-controller="DIController">
+    <input type="text" ng-model="name" ng-blur="upper();">
+    </div>
   </body>
 </html>
