--- a/Module1_Soln/index.html
+++ b/Module1_Soln/index.html
@@ -1,1 +1,32 @@
+<!doctype html>
+<html ng-app="LunchCheck" lang="en">
+  <head>
+    <title>Lunch Checker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <style>
+      .message { font-size: 1.3em; font-weight: bold; }
+    </style>
+  </head>
+    <script src="angular.min.js"></script>
+  <script src="app.js"></script>
 
+<body>
+   <div class="container" ng-controller='LunchCheckController'>
+     <h1>Lunch Checker</h1>
+
+         <div class="form-group">
+             <input  ng-model="LunchList" type="text"
+             placeholder="list comma separated dishes you usually have for lunch"
+             class="form-control">
+         </div>
+         <div class="form-group">
+             <button class="btn btn-default" ng-click="checkLunch();">Check If Too Much</button>
+         </div>
+         <div class="form-group message">
+           {{sayMessage}}
+         </div>
+   </div>
+
+</body>
+</html>
